# pre-commit-hooks

./: .pre-commit-hooks.yaml  requirements.txt  setup.cfg
pre_commit_hooks/: check_match.py  just_fail.py  missing_attributes_schema.py  utils.py  validate_json_schemas.py  version_bump.py
sh_hooks/: helmlint.sh
