[metadata]
name = onyxia_pre_commit_hooks
version = 0.0.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gaspi/pre-commit-hooks
author = Gaspard Ferey
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.9

[options.entry_points]
console_scripts =
    validate-schema-json = pre_commit_hooks.validate_json_schemas:main
