[metadata]
name = onyxia_pre_commit_hooks
version = 0.0.1
description = Some out-of-the-box hooks for pre-commit for Onyxia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gaspi/pre-commit-hooks
author = Gaspard Ferey
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    jsonschema>=4.0.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    validate-json-schemas = pre_commit_hooks.validate_json_schemas:main
    missing-attributes-schemas = pre_commit_hooks.missing_attributes_schema:main
