[metadata]
name = onyxia_pre_commit_hooks
version = 0.0.1
description = Some pre-commit hooks tailored for Onyxia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gaspi/pre-commit-hooks
author = Gaspard Ferey
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    jsonschema>=4.0.0
    packaging
python_requires = >=3.9

[options.entry_points]
console_scripts =
    validate-json-schemas = pre_commit_hooks.validate_json_schemas:main
    missing-attributes-schemas = pre_commit_hooks.missing_attributes_schema:main
    check-match = pre_commit_hooks.check_match:main
    version-bump = pre_commit_hooks.version_bump:main
